fix(deps): update jackson core dependencies (#100)