@@ -21,10 +21,10 @@ repositories {
 
 dependencies {
     implementation("com.factset.sdk:utils:1.+")
-    implementation("com.fasterxml.jackson.core:jackson-core:2.15.3")
-    implementation("com.fasterxml.jackson.core:jackson-annotations:2.17.0")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.3")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0")
+    implementation("com.fasterxml.jackson.core:jackson-core:2.20.0")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.20")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.20.0")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0")
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     implementation("org.slf4j:slf4j-api:2.0.17")
@@ -42,6 +42,7 @@ dependencies {
 }
 
 tasks.test {
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
     useJUnitPlatform()
 }
 
